--- a/index.html
+++ b/index.html
@@ -722,9 +722,9 @@
         </section>
 
         <footer class="mt-16 py-8 border-t text-center text-gray-600">
-            <p>© 2023 PLAYAUTO. 모든 권리 보유.</p>
+            <p>© 2025 marktrade. 모든 권리 보유.</p>
             <p class="mt-2">본 매뉴얼은 내부용으로 제작되었습니다.</p>
-            <p class="mt-2">최종 업데이트: 2023년 12월</p>
+            <p class="mt-2">최종 업데이트: 2025년 04월</p>
         </footer>
     </div>
 </body>
